--- a/staking-contract/package.json
+++ b/staking-contract/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.8.0",
-    "@thirdweb-dev/contracts": "^3.3.2"
+    "@thirdweb-dev/contracts": "^3.3.2",
+    "@thirdweb-dev/react": "^3.13.1",
+    "@thirdweb-dev/sdk": "^3.10.21"
   }
 }
